Fix up styling issues with white space and text decoration

--- a/portfolio/src/styles/app.scss
+++ b/portfolio/src/styles/app.scss
@@ -3,6 +3,7 @@ $componentHeight: 100vh;
 .home-container
 {
     min-height: 100vh;
+    max-width: 100%;
     background-image: url('/images/landscape-4637538_1920.jpg');
     background-repeat: no-repeat;
     display: flex;
